fixed storm parts overflow on small screens

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -552,14 +552,15 @@ pre code {
   }
 }
 
-@media (max-width: 440px) {
+
+/* X card */
+@media (max-width: 390px) {
   a.tw-no-underline .react-tweet-theme.tweet-container_root__0rJLq,
   a.tw-no-underline .react-tweet-theme.tweet-container_root__0rJLq * {
     white-space: pre-wrap !important;
     word-break: normal !important;
     overflow-wrap: break-word !important;
   }
-
 
   .tweet-body_root__ChzUj {
     font-size: 1rem !important;
